# napari-roi-manager

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_roi_manager/: __init__.py  _dataclasses.py  napari.yaml
src/napari_roi_manager/_tests/: _test_roiset.json  test_widget.py
src/napari_roi_manager/ij/: __init__.py  _convert.py  _core.py
src/napari_roi_manager/layers/: __init__.py  _dataclasses.py  _hidden_data.py  _key_bindings.py  _layer.py
src/napari_roi_manager/widgets/: __init__.py  _dialogs.py  _roi_manager.py
