[build-system]
requires = ["hatchling>=1.26.1"]
build-backend = "hatchling.build"

[project]
name = "napari-roi-manager"
dynamic = ["version"]
description = "A ROI Manager Widget with an UI similar to ImageJ"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [
    { name = "Hanjin Liu", email = "liuhanjin.sc@gmail.com" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy",
    "qtpy",
    "roifile",
]

[project.optional-dependencies]
testing = [
    "napari",
    "pyqt5",
    "pytest",
    "pytest-cov",
    "pytest-qt",
    "tox",
]

[project.entry-points."napari.manifest"]
napari-roi-manager = "napari_roi_manager:napari.yaml"

[project.urls]
"Bug Tracker" = "https://github.com/hanjinliu/napari-roi-manager/issues"
Documentation = "https://github.com/hanjinliu/napari-roi-manager#README.md"
Homepage = "https://github.com/hanjinliu/napari-roi-manager"
"Source Code" = "https://github.com/hanjinliu/napari-roi-manager"
"User Support" = "https://github.com/hanjinliu/napari-roi-manager/issues"

[tool.hatch.version]
path = "src/napari_roi_manager/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.black]
line-length = 88
target-version = ["py39"]


[tool.ruff]
line-length = 88
select = [
    "E", "F", "W", #flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long. let black handle this
    "UP006", "UP007", # type annotation. As using magicgui require runtime type annotation then we disable this.
    "SIM117", # flake8-simplify - some of merged with statements are not looking great with black, reanble after drop python 3.9
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*vendored*",
    "*_vendor*",
]

target-version = "py39"
fix = true
